# nexia

./: .gitignore  2025-06-17_Nexia Interface Exploration_msg13_block0.txt  AUTOMATION-V2-EXECUTABLE.md  AUTOMATION-WORKFLOWS-N8N.md  BLOTATO-COMPETITIVE-ANALYSIS.md  BLUEOCEAN-CICD-RULES-DRAFT.md  BLUEOCEAN-NEXTSTEP-STRATEGY-ANALYSIS.md  BLUEOCEAN-REGLES-CICD-DRAFT-FR-SECURITY.md  BLUEOCEAN-REGLES-CICD-DRAFT-FR.md  CHANTIER1__architecture_Cluster_Blueocean.md  CHEMIN-CRITIQUE-INDUSTRIEL.md  CHEMIN-CRITIQUE-V2-REALISTE.md  CLAUDE-AGENTS-0-API-COST.md  CLAUDE-AGENTS-CLUSTER-AUTOMATION.md  CLAUDE-AGENTS-HYBRID-APPROACH.md  CLAUDE-AGENTS-USE-CASES-ROI.md  CLAUDE-NEXTSTEP-QUICK-GUIDE.md  CLAUDE-USAGE-MONITOR-0-COST.md  CLAUDE.md  COHERENCE-ALIGNMENT-AUDIT.md  DEPLOYMENT-GUIDE.md  EMAIL-TIMING-MATRIX-COMPLETE.md  EMAIL-TIMING-MATRIX-US.md  FASTCASH-MAUTIC-IMPORT.csv  FASTCASH-PROSPECTS-CLEAN.csv  FASTCASH-STATUS-15MIN.md  FICHE-PRODUIT-KREACH.md  KREACH-SPECIFICATIONS-V3-FINALES.md  KVIBE-DEVELOPMENT-PROMPT-TEMPLATE.md  KVIBE-RESPONSIVE-REALDATA-PLAN.md  KVIBES-SPECIFICATIONS-V3-FINALES.md  MAC-AUTOMATOR-VOICE-CONTROL.md  NEXIA-FOCUS-RULES.md  NEXIA-INTERFACE-DOCUMENTATION.md  NEXIA-RAILGUARDS.md  NEXIA-STATUS.md  NEXIA-VOICE-SPEC-TECHNIQUE.md  NEXTGEN-SPECIFICATIONS-V3-FINALES.md  NEXTSTEP-ARCHITECTURE-STATUS.md  NEXTSTEP-ARCHITECTURE-UNIQUE-FINALE.md  (+79 more)
.claude/: settings.local.json
Historiques_sessions_terminal/: Terminal_Window10_ludovicpilet_____Claude_OnlyOneAPI_DevOps___-zsh___09-11-2025.txt  Terminal_Window10_ludovicpilet_________Message_Length_____claude_TMP_09-15-2025.txt  Terminal_Window10_ludovicpilet_________RAF_Correction_____claude_TMP_09-15-2025.txt  Terminal_Window10_ludovicpilet__________Claude_OnlyOneAPI_DevOps_____09-11-2025.txt  Terminal_Window10_ludovicpilet__________Claude_OnlyOneAPI_DevOps_____09-12-2025.txt  (+1036 more)
services/ai-core/: .env.langsmith  Dockerfile  pyproject.toml
services/ai-core/app/: config.py
services/ai-core/app/api/v1/: __init__.py
services/ai-core/app/api/v1/endpoints/: conversation.py  ideas.py  mcp.py  modes.py  settings.py
services/ai-core/app/core/: ai_engine.py  claude_bridge.py  langsmith_integration.py  mcp_git.py  mcp_shell.py  modes.py  redis_client.py
services/ai-core/app/models/: conversation.py
voice-app/src-tauri/: Cargo.toml  tauri.conf.json
voice-app/src-tauri/src/: main.rs
(+493 files in other folders)
