[tool.poetry]
name = "nexia-ai-core"
version = "0.1.0"
description = "Nexia AI Core Service"
authors = ["Nextstep Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
langchain = "^0.3.26"
langchain-openai = "^0.3.26"
langchain-anthropic = "^0.3.16"
langchain-community = "^0.3.26"
langsmith = "^0.3.45"
openai = "^1.3.0"
anthropic = "^0.52.0"
redis = "^5.0.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
greenlet = "^3.2.3"
playwright = "^1.55.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
